...
                            <constraint firstItem="e6e-ZY-PeM" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="iwz-A7-xQl"/>
                            <constraint firstItem="e6e-ZY-PeM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mIM-YE-0hi"/>
                            <constraint firstItem="e6e-ZY-PeM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="vpQ-x2-NZm"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Akl-qy-ma2">
                        <barButtonItem key="rightBarButtonItem" title="show history" id="lL7-NG-fFp">
                            <connections>
                                <segue destination="9cQ-S0-jUD" kind="show" id="cg4-ZE-Stg"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                            <constraint firstItem="cBg-98-xDf" firstAttribute="bottom" secondItem="t9N-Eh-83Q" secondAttribute="bottom" id="N76-zj-10s"/>
                            <constraint firstItem="cBg-98-xDf" firstAttribute="leading" secondItem="t9N-Eh-83Q" secondAttribute="leading" id="V9i-rT-Aks"/>
                            <constraint firstItem="cBg-98-xDf" firstAttribute="trailing" secondItem="t9N-Eh-83Q" secondAttribute="trailing" id="fO3-Qg-x4y"/>
                            <constraint firstItem="cBg-98-xDf" firstAttribute="top" secondItem="t9N-Eh-83Q" secondAttribute="top" id="g8h-de-FL6"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="History" id="0fI-Xa-dhJ"/>
                    <connections>
                        <outlet property="tableView" destination="cBg-98-xDf" id="wEP-3g-UIq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ZNJ-go-gjj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
